# Concepts

./: CMakeLists.txt  README.md  main.cpp
CmakeDynamicLib/: .gitignore  CMakeLists.txt
CppRoadmap/: CMakeLists.txt
CppRoadmap/src/: Test.hpp
CppRoadmap/testing/: hello_test.cc
HackerRankFiles/: VectorSort.cpp
HackerRankFiles/AbstractClasses/: AbstractClasses.cpp  CMakeLists.txt
HackerRankFiles/Polymorphism/: CMakeLists.txt  Polymorphism.cpp
Playground/: CMakeLists.txt  Readme.txt  main.cpp
Playground/Containers/: Containers.hpp
Playground/MemoryAllocation/: StaticDynamicProblems.hpp
Playground/Tests/: TestsMemory.cc
Playground/Variables/: Variables.hpp
PythonVehicleRouting/ai-car-simulation/: README.txt
add/add_one/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
lstm/: .gitignore  NAVO.keras  chosen.csv  jakub.keras  lstm.py  test.py  tryout.py
lstm/model/: m.keras
src/: CMakeLists.txt  main.cpp
src/Logger/: Logger.cpp  Logger.hpp
